--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>NRGmaze - Main</title>
-<meta name="description" content="Focus on NRG in our heart.">
+<meta name="description" content="Energy in our heart.">
 <meta name="author" content="umezane">
 <link rel="icon" href="/favicon.ico"><meta property="og:title" content="Main" />
-<meta property="og:description" content="Focus on NRG in our heart." />
+<meta property="og:description" content="Energy in our heart." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://nrgmaze.org/" /><meta property="og:image" content="https://pub-40d74a187f174a7c8cf707d29cf5129a.r2.dev/images/2025/03/header01.PNG" />
 
@@ -81,7 +81,6 @@
     }
       </style>
 
-
 </head>
     <body>
 
@@ -97,9 +96,9 @@
                 <nav class="navbar-wrapper"><div class="box morerounded">
     <ul class="navbar">
             <li>Main</li>
-        <li><a href="/about/">About</a></li>
         <li><a href="/tags/">Tags</a></li>
         <li><a href="/archives/">Archives</a></li>
+        <li><a href="/about/">About</a></li>
         <li><a href="/index.xml">Rss Feed</a></li>
 
         
@@ -197,9 +196,9 @@
                         <nav id="desktop-navbar" class="col col-8 offset-2 col-sm-4 offset-sm-0 col-lg-3"><div class="box morerounded">
     <ul class="navbar">
             <li>Main</li>
-        <li><a href="/about/">About</a></li>
         <li><a href="/tags/">Tags</a></li>
         <li><a href="/archives/">Archives</a></li>
+        <li><a href="/about/">About</a></li>
         <li><a href="/index.xml">Rss Feed</a></li>
 
         
@@ -220,6 +219,7 @@
                                     <picture>
                                         <img src="https://pub-40d74a187f174a7c8cf707d29cf5129a.r2.dev/images/2025/03/NRGmaze_Banner.GIF" alt="nrgmaze_banner" style="width: 100%; max-width: 300px; margin: 20px auto;">
                                         <img src="https://pub-40d74a187f174a7c8cf707d29cf5129a.r2.dev/images/2025/03/nrgmazewhat.gif" alt="nrgmazewhat" style="width: 70%; margin: 20px auto;">
+
                                     </picture>
                                 </div>
                             </div>
