网页预览图片你怎么了

--- a/404.html
+++ b/404.html
@@ -78,6 +78,18 @@
     }
       </style>
 
+
+<meta property="og:title" content="404 Page not found">
+<meta property="og:description" content="">
+<meta property="og:image" content="">
+<meta property="og:url" content="https://nrgmaze.org/404.html">
+<meta property="og:type" content="website">
+
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="404 Page not found">
+<meta name="twitter:description" content="">
+<meta name="twitter:image" content="">
 </head>
     <body>
 
