--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
     }
       </style>
 
+
+<meta property="og:title" content="Main">
+<meta property="og:description" content="">
+<meta property="og:image" content="">
+<meta property="og:url" content="https://nrgmaze.org/">
+<meta property="og:type" content="website">
+
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Main">
+<meta name="twitter:description" content="">
+<meta name="twitter:image" content="">
 </head>
     <body>
 
