--- a/about/index.html
+++ b/about/index.html
@@ -101,18 +101,8 @@ Theme: 不会写代码与LLM拉扯千百回合最后魔改了一大半的Ticky T
     }
       </style>
 
-
-<meta property="og:title" content="About">
-<meta property="og:description" content="">
-<meta property="og:image" content="">
-<meta property="og:url" content="https://nrgmaze.org/about/">
-<meta property="og:type" content="website">
-
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="About">
-<meta name="twitter:description" content="">
-<meta name="twitter:image" content="">
+<meta property="og:image" content="https://nrgmaze.org/favicon.ico">
+<meta name="twitter:image" content="https://nrgmaze.org/favicon.ico">
 </head>
     <body>
 
