--- a/about/index.html
+++ b/about/index.html
@@ -100,9 +100,21 @@ Theme: 不会写代码与LLM拉扯千百回合最后魔改了一大半的Ticky T
        font-weight: normal;
     }
       </style>
+<meta property="og:type" content="article" />
+<meta property="og:title" content="About" />
+<meta property="og:description" content="Energy in our heart." />
+<meta property="og:site_name" content="NRGmaze" />
+<meta property="og:image" content="https://nrgmaze.org/images/IMG_2437.PNG" />
+<meta property="og:url" content="https://nrgmaze.org/about/" />
+<meta property="og:locale" content="zh-CN" />
 
-<meta property="og:image" content="https://nrgmaze.org/favicon.ico">
-<meta name="twitter:image" content="https://nrgmaze.org/favicon.ico">
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="About" />
+<meta name="twitter:description" content="Energy in our heart." />
+<meta name="twitter:image" content="https://nrgmaze.org/images/IMG_2437.PNG" />
+<meta name="twitter:domain" content="https://nrgmaze.org/about/" />
+
 </head>
     <body>
 
