--- a/about/index.html
+++ b/about/index.html
@@ -299,7 +299,7 @@ Theme: 不会写代码与LLM拉扯千百回合最后魔改了一大半的Ticky T
                     <img src="https://pub-40d74a187f174a7c8cf707d29cf5129a.r2.dev/images/2025/03/nrgmazeCounterclockwise.GIF" alt="nrgmazeCounterclockwise" style="width: 30%; margin: 20px auto;">
                 </div>
 
-Webmaster: <a href="mailto:umezane06@tutanota.com">umezane06@tutanota.com</a>
+Webmaster: <a href="mailto:umezane06[at]tutanota.com">umezane06[at]tutanota.com</a>
 
 
 
