--- a/404.html
+++ b/404.html
@@ -91,6 +91,8 @@
 <meta name="twitter:description" content="Energy in our heart." />
 <meta name="twitter:image" content="https://nrgmaze.org/images/IMG_2437.PNG" />
 <meta name="twitter:domain" content="https://nrgmaze.org/404.html" />
+
+<script src="lastfm.js" type="module"></script>
 </head>
     <body>
 
