--- a/about/index.html
+++ b/about/index.html
@@ -119,6 +119,8 @@ Theme: 不会写代码与LLM拉扯千百回合最后魔改了一大半的Ticky T
 <meta name="twitter:description" content="Energy in our heart." />
 <meta name="twitter:image" content="https://nrgmaze.org/images/IMG_2437.PNG" />
 <meta name="twitter:domain" content="https://nrgmaze.org/about/" />
+
+<script src="lastfm.js" type="module"></script>
 </head>
     <body>
 
