--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                                 </div>
                                 
                                 <div id="lastfm-tracks-Desktop">
-                                    <a href="https://www.last.fm/umezane"><img src="https://juicy.fluid-skins.top/api?user=umezane&count=5" height="100%" width="100%"/></a>
+                                    <a href="https://www.last.fm/user/umezane"><img src="https://juicy.fluid-skins.top/api?user=umezane&count=5" height="100%" width="100%"/></a>
                                 </div>
 
 
@@ -261,7 +261,7 @@
                 </div></center>
 
                 <center><div id="lastfm-tracks-Mobile">
-                    <a href="https://www.last.fm/umezane"><img src="https://juicy.fluid-skins.top/api?user=umezane&count=5" height="95%" width="95%"/></a>
+                    <a href="https://www.last.fm/user/umezane"><img src="https://juicy.fluid-skins.top/api?user=umezane&count=5" height="95%" width="95%"/></a>
                 </div></center>
 
                 
